src/objects/Contact_Email_Distribution__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contact Email Distributions</relationshipLabel>
        <relationshipName>Contact_Email_Distributions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CDB_ID__c</fullName>
        <externalId>true</externalId>
        <label>CDB ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Email Distributions</relationshipLabel>
        <relationshipName>Contact_Email_Distributions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email_Distribution__c</fullName>
        <label>Email Distribution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>News_ID__c</fullName>
        <externalId>true</externalId>
        <label>News ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Soft_Launch__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used in WP1 to identify the distributions created during soft launch</inlineHelpText>
        <label>Soft Launch</label>
        <type>Checkbox</type>
    </fields>
    <label>Contact Email Distribution</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact__c</field>
            <operation>equals</operation>
            <value>Kip Kolodziejski</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Contact_Email_Distro_s_by_Account</fullName>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>NAME</columns>
        <columns>Opt_Out__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Commercial,Asset</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
            <value>Lendlease (NA)</value>
        </filters>
        <label>Contact Email Distro&apos;s by Account</label>
    </listViews>
    <listViews>
        <fullName>Mass_Delete</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Opt_Out__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
            <value>hines</value>
        </filters>
        <label>Mass Delete</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Email Distributions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>